# argusllm-sentinel

./: LICENSE  README.md  pyproject.toml
argusllm/: __init__.py  cli.py  config.py  rules.py  schemas.py  scorer.py  server.py
argusllm/detectors/: encoding.py  injection.py  secrets.py
